--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sonidos y Voces</title>
+    <title>TTSoft</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Sonidos y Voces</h1>
+        <h1>TTSoft</h1>
     </header>
     <main>
         <!-- Sección de introducción -->
         <section id="intro">
-            <h2>Bienvenido</h2>
+            <h2>Holiwi!</h2>
             <p>
-                Esta página te permite reproducir sonidos y voces. 
-                Puedes encontrar una sección para reproducir frases grabadas y otra para efectos de sonido.
-                Simplemente haz clic en los botones para escucharlos.
+                En esta pagina podras ver como usar las voces y sonidos dentro del propio TTS.
+                Para elegir una voz usaras el nombre de la voz entre parentesis y con un :
+                Por ejemplo -> (Arthur:) Hola soy Arthur.
+                Si quieres puedes usar varias voces en el mismo TTS de esta manera ->
+                (Arthur:) Hola yo soy Arthur y esta es Aerista. (Aerista:) Hola soy Aerista, encantada!
+                Para usar audios dentro del TTS simplemente pon el nombre del audio entre parentesis.
+                Un ejemplo seria -> (Arthur:) ¿Hay alguien en casa? (puerta-llamar) (puerta-abriendo) (Aerista:) Hola Arthur!
             </p>
         </section>
 
