Añadir estructura estática con sonidos y voces

--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
         <section id="intro">
             <h2>Holiwi!</h2>
             <p>
-                En esta pagina podras ver como usar las voces y sonidos dentro del propio TTS.
-                Para elegir una voz usaras el nombre de la voz entre parentesis y con un :
-                Por ejemplo -> (Arthur:) Hola soy Arthur.
-                Si quieres puedes usar varias voces en el mismo TTS de esta manera ->
-                (Arthur:) Hola yo soy Arthur y esta es Aerista. (Aerista:) Hola soy Aerista, encantada!
-                Para usar audios dentro del TTS simplemente pon el nombre del audio entre parentesis.
-                Un ejemplo seria -> (Arthur:) ¿Hay alguien en casa? (puerta-llamar) (puerta-abriendo) (Aerista:) Hola Arthur!
+                En esta pagina podras ver como usar las voces y sonidos dentro del propio TTS :3
             </p>
         </section>
 
