Añadir estructura estática con sonidos y voces

--- a/index.html
+++ b/index.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TTSoft</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
-        <h1>TTSoft</h1>
+        <h1>TTSoft - Sonidos y Voces</h1>
     </header>
     <main>
-        <!-- Sección de introducción -->
-        <section id="intro">
-            <h2>Holiwi!</h2>
-            <p>
-                En esta pagina podras ver como usar las voces y sonidos dentro del propio TTS :3
-            </p>
-        </section>
+        <div id="mainContainer">
+            <!-- Sección de introducción -->
+            <section id="intro">
+                <h2>Holiwi!</h2>
+                <p>
+                    En esta pagina podras ver como usar las voces y sonidos dentro del propio TTS :3
+                </p>
+            </section>
 
-        <!-- Sección de voces -->
-        <section id="voices">
-            <h2>Voces</h2>
-            <div id="voiceContainer"></div>
-        </section>
+            <!-- Sección de voces -->
+            <section id="voices">
+                <h2>Voces</h2>
+                <div id="voiceContainer"></div>
+            </section>
 
-        <!-- Sección de sonidos -->
-        <section id="sounds">
-            <h2>Sonidos</h2>
-            <div id="soundContainer"></div>
-        </section>
+            <!-- Sección de sonidos -->
+            <section id="sounds">
+                <h2>Sonidos</h2>
+                <div id="soundContainer"></div>
+            </section>
+        </div>
     </main>
     <footer>
-        <p>© 2024 Mi Página</p>
+        <p>© 2024 TTSoft</p>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
