Añadir estructura estática con sonidos y voces

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>TTSoft - Sonidos y Voces</h1>
+        <button id="themeToggle" class="theme-button">Modo Oscuro</button>
     </header>
     <main>
         <div id="mainContainer">
