--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <body>
     <header>
-        <h1>TTSoft - Sonidos y Voces</h1>
-        <button id="themeToggle" class="theme-button">Modo Oscuro</button>
+        <h1>Sonidos y Voces</h1>
+        <button id="themeToggle" class="theme-button">
+            <img id="themeIcon" src="./static/resources/sun.png" alt="Modo Oscuro">
+        </button>
     </header>
     <main>
         <div id="mainContainer">
