--- a/index.html
+++ b/index.html
@@ -10,31 +10,67 @@
 
 <body>
     <header>
-        <h1>Sonidos y Voces</h1>
+        <div id="headerContent">
+            <img src="./static/resources/singgers.webp" alt="Logo" id="headerLogo">
+            <h1>TTSoft - Sonidos y Voces</h1>
+            <img src="./static/resources/singgers.webp" alt="Logo" id="headerLogo">
+        </div>
         <button id="themeToggle" class="theme-button">
             <img id="themeIcon" src="./static/resources/sun.png" alt="Modo Oscuro">
         </button>
     </header>
-    <main>
+    <main id="layout">
         <div id="mainContainer">
-            <!-- Sección de introducción -->
             <section id="intro">
                 <h2>Holiwi!</h2>
                 <p>
-                    En esta pagina podras ver como usar las voces y sonidos dentro del propio TTS :3
+                    En esta pagina podras ver como usar las voces y sonidos dentro del propio TTS. Clica en los botones para reproducir el sonido, tambien se copiara el codigo del sonido en tu portapapeles.
                 </p>
             </section>
 
-            <!-- Sección de voces -->
             <section id="voices">
                 <h2>Voces</h2>
                 <div id="voiceContainer"></div>
             </section>
 
-            <!-- Sección de sonidos -->
             <section id="sounds">
                 <h2>Sonidos</h2>
                 <div id="soundContainer"></div>
+            </section>
+        </div>
+        <div id="sideContainer">
+            <section id="tutorial">
+                <h2>Tutorial de Voces</h2>
+                <p>
+                    Para usar las voces tendras que escribir el nombre de la voz con dos puntos entre parentesis.
+                </p>
+                <div id="ejemplo">
+                    <span class="rosa">(Martin:)</span> Hola soy Martín.
+                </div>
+                <p>
+                    Si quieres puedes usar varias voces en el mismo texto.
+                </p>
+                <div id="ejemplo">
+                    <span class="rosa">(Martin:)</span> Hola soy Martín y ahora <span class="rosa">(Aerista:)</span> soy Aerista.
+                </div>
+            </section>
+
+            <section>
+                <h2>Tutorial de Sonidos</h2>
+                <p>
+                    Para usar los sonidos tendras que escribir el nombre del sonido entre parentesis.
+                </p>
+                <div id="ejemplo">
+                    Estoy muy triste <span class="azul">(llorar)</span> voy a beber agua <span class="azul">(servir-agua)</span>.
+                </div>
+            </section>
+
+            <section id="tutorial">
+                <h2>Combinar Voces y Audios</h2>
+                <p>Puedes combinar el uso de voces con el uso de audios.</p>
+                <div id="ejemplo">
+                    <span class="rosa">(Arthur:)</span> Que rica esta cerveza.. <span class="azul">(tragar)</span> <span class="rosa">(Aerista:)</span> Deja de beber borracho! <span class="azul">(puñetazo)</span> ya vale eh!?
+                </div>
             </section>
         </div>
     </main>
