--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </section>
 
             <section id="tutorial">
-                <h2>Combinar Voces y Audios</h2>
+                <h2>Voces y Sonidos</h2>
                 <p>Puedes combinar el uso de voces con el uso de audios.</p>
                 <div id="ejemplo">
                     <span class="rosa">(Arthur:)</span> Que rica esta cerveza.. <span class="azul">(tragar)</span> <span class="rosa">(Aerista:)</span> Deja de beber borracho! <span class="azul">(puñetazo)</span> ya vale eh!?
