--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TTSoft</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./static/resources/sit.webp" type="image/png">
+
 </head>
 
 <body>
