--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
                     <span class="rosa">(Arthur:)</span> Que rica esta cerveza.. <span class="azul">(tragar)</span> <span class="rosa">(Aerista:)</span> Deja de beber borracho! <span class="azul">(puñetazo)</span> ya vale eh!?
                 </div>
             </section>
+
+            <section id="tutorial">
+                <h2>Avanzado</h2>
+                <p>Al clicar un boton se te copiara el id en vez de la voz, de esta forma puedes si quieres ahorrarte caracteres</p>
+                <div id="ejemplo">
+                    <span class="rosa">(3:)</span> Hola soy Arthur, <span class="rosa">(Arthur:)</span> y yo tambien lo soy. Toma <span class="azul">(sartenazo)</span> y toma tambien <span class="azul">(25)</span>
+                </div>
+            </section>
         </div>
     </main>
     <footer>
